--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.66.5",
+    "@types/ajv": "^0.0.5",
     "ajv": "^8.17.1",
     "chromadb": "^1.10.4",
     "class-variance-authority": "^0.7.0",
@@ -89,7 +90,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "20.16.11",
+    "@types/node": "^20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
