--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "@redux-ai/react",
+  "name": "@redux-ai/client",
+  "private": true,
   "version": "0.1.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@redux-ai/react": "workspace:*",
     "@redux-ai/schema": "workspace:*",
     "@redux-ai/state": "workspace:*",
     "@redux-ai/vector": "workspace:*",
@@ -15,9 +17,5 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0"
-  },
-  "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
   }
 }
