Agent query: I'm working on fixing the build process by updating the TypeScript configurations across all packages. We're making progress, but still encountering some configuration issues. Should I continue with this approach of fixing the TypeScript builds, or would you prefer to try a different solution?
Configure monorepo build process: Add `tsc --watch` for development, enable declaration generation and composite builds, and adjust dependencies for correct build order.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/597e53f2-a0bd-47ef-a44e-bd615e90097f/20287019-863c-40a3-9bb0-85ca15c863ae.jpg

--- a/packages/state/package.json
+++ b/packages/state/package.json
@@ -4,9 +4,11 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsc --watch"
   },
   "dependencies": {
+    "@redux-ai/schema": "workspace:*",
     "@reduxjs/toolkit": "^2.5.1",
     "xstate": "^5.19.2"
   }
