--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -11,8 +11,17 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "declaration": true,
+    "noEmit": false,
+    "allowImportingTsExtensions": false,
+    "composite": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "exclude": ["node_modules", "**/*.test.ts", "dist"],
+  "references": [
+    { "path": "../schema" },
+    { "path": "../state" },
+    { "path": "../vector" }
+  ]
 }
