Agent step too complex - Fix monorepo package resolution and workspace configuration to enable proper local package imports
Update dependencies and add tailwindcss theme.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/597e53f2-a0bd-47ef-a44e-bd615e90097f/20287019-863c-40a3-9bb0-85ca15c863ae.jpg

--- a/packages/state/tsconfig.json
+++ b/packages/state/tsconfig.json
@@ -10,8 +10,16 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "declaration": true,
+    "noEmit": false,
+    "allowImportingTsExtensions": false,
+    "composite": true,
+    "tsBuildInfoFile": "./.tsbuildinfo"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "exclude": ["node_modules", "**/*.test.ts", "dist"],
+  "references": [
+    { "path": "../schema" }
+  ]
 }
