--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -15,7 +15,8 @@
     "declaration": true,
     "noEmit": false,
     "allowImportingTsExtensions": false,
-    "composite": true
+    "composite": true,
+    "tsBuildInfoFile": "./.tsbuildinfo"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts", "dist"],
