--- a/packages/schema/tsconfig.json
+++ b/packages/schema/tsconfig.json
@@ -14,7 +14,8 @@
     "declaration": true,
     "noEmit": false,
     "allowImportingTsExtensions": false,
-    "composite": true
+    "composite": true,
+    "tsBuildInfoFile": "./.tsbuildinfo"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts", "dist"]
