Agent query: Are there any dependency-related errors in the console after updating the workspace dependencies?
Update package dependencies to use version ranges instead of workspace links.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/597e53f2-a0bd-47ef-a44e-bd615e90097f/f8b3e40d-0443-4278-ac75-52246fc1ec33.jpg

--- a/packages/vector/package.json
+++ b/packages/vector/package.json
@@ -17,7 +17,7 @@
     "dev": "tsc --watch"
   },
   "dependencies": {
-    "@redux-ai/schema": "workspace:*",
+    "@redux-ai/schema": "^0.1.0",
     "chromadb": "^1.10.4",
     "langchain": "^0.3.15"
   }
