--- a/packages/state/package.json
+++ b/packages/state/package.json
@@ -17,7 +17,7 @@
     "dev": "tsc --watch"
   },
   "dependencies": {
-    "@redux-ai/schema": "workspace:*",
+    "@redux-ai/schema": "^0.1.0",
     "@reduxjs/toolkit": "^2.5.1",
     "xstate": "^5.19.2"
   }
