Agent query: Is the application now showing the Redux AI Demo title and the chat interface instead of a white screen?
Update package.json files to use workspace:* for internal package dependencies.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/597e53f2-a0bd-47ef-a44e-bd615e90097f/b652c8b7-9465-40a3-9523-8f385772317b.jpg

--- a/packages/state/package.json
+++ b/packages/state/package.json
@@ -17,7 +17,7 @@
     "dev": "tsc --watch"
   },
   "dependencies": {
-    "@redux-ai/schema": "^0.1.0",
+    "@redux-ai/schema": "workspace:*",
     "@reduxjs/toolkit": "^2.5.1",
     "xstate": "^5.19.2"
   }
