--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@redux-ai/react": "^0.1.0",
-    "@redux-ai/schema": "^0.1.0",
-    "@redux-ai/state": "^0.1.0",
-    "@redux-ai/vector": "^0.1.0",
+    "@redux-ai/react": "workspace:*",
+    "@redux-ai/schema": "workspace:*",
+    "@redux-ai/state": "workspace:*",
+    "@redux-ai/vector": "workspace:*",
     "@reduxjs/toolkit": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
