--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -17,9 +17,9 @@
     "dev": "tsc --watch"
   },
   "dependencies": {
-    "@redux-ai/schema": "^0.1.0",
-    "@redux-ai/state": "^0.1.0",
-    "@redux-ai/vector": "^0.1.0",
+    "@redux-ai/schema": "workspace:*",
+    "@redux-ai/state": "workspace:*",
+    "@redux-ai/vector": "workspace:*",
     "@reduxjs/toolkit": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
