--- a/packages/vector/package.json
+++ b/packages/vector/package.json
@@ -17,7 +17,7 @@
     "dev": "tsc --watch"
   },
   "dependencies": {
-    "@redux-ai/schema": "^0.1.0",
+    "@redux-ai/schema": "workspace:*",
     "chromadb": "^1.10.4",
     "langchain": "^0.3.15"
   }
