--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.66.5",
     "@types/ajv": "^0.0.5",
+    "@xenova/transformers": "^2.17.2",
     "ajv": "^8.17.1",
     "chromadb": "^1.10.4",
     "class-variance-authority": "^0.7.0",
