Agent query: I've removed the ChromaDB dependencies from the vector storage implementation, but we're still having trouble with the server connectivity. Would you like me to focus on fixing the server connection issues next?
Refactor: Remove Langchain dependencies and simplify VectorStorage implementation.  Update dependencies and add health check endpoint.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/597e53f2-a0bd-47ef-a44e-bd615e90097f/fc2a76e7-2c45-4891-adad-530aa8ecf8e4.jpg

--- a/packages/vector/package.json
+++ b/packages/vector/package.json
@@ -17,8 +17,6 @@
     "dev": "tsc --watch"
   },
   "dependencies": {
-    "@redux-ai/schema": "workspace:*",
-    "chromadb": "^1.10.4",
-    "langchain": "^0.3.15"
+    "@redux-ai/schema": "workspace:*"
   }
 }
