Agent query: I've made some progress fixing the TypeScript errors in the vector package, but we're still encountering build issues with the state package. Would you like me to continue working on fixing these TypeScript errors, or would you prefer to try a different approach to get the app running?
Fix: Resolved build issues and improved type safety, added path aliases for improved project structure.

--- a/packages/state/tsconfig.json
+++ b/packages/state/tsconfig.json
@@ -15,11 +15,16 @@
     "noEmit": false,
     "allowImportingTsExtensions": false,
     "composite": true,
-    "tsBuildInfoFile": "./.tsbuildinfo"
+    "tsBuildInfoFile": "./.tsbuildinfo",
+    "paths": {
+      "@redux-ai/vector": ["../vector/src"],
+      "@redux-ai/schema": ["../schema/src"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts", "dist"],
   "references": [
-    { "path": "../schema" }
+    { "path": "../schema" },
+    { "path": "../vector" }
   ]
 }
