Agent query: I've updated the TypeScript configuration to fix build issues. Can you check if the application loads correctly?
Fix: Resolve build issues after switching to pnpm; add error handling to ReduxAIState creation.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/597e53f2-a0bd-47ef-a44e-bd615e90097f/23da254d-8bb6-4779-94d6-2d2827b2c54c.jpg

--- a/packages/state/package.json
+++ b/packages/state/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@redux-ai/schema": "workspace:*",
+    "@redux-ai/vector": "workspace:*",
     "@reduxjs/toolkit": "^2.5.1",
     "xstate": "^5.19.2"
   }
