--- a/packages/state/tsconfig.json
+++ b/packages/state/tsconfig.json
@@ -15,11 +15,7 @@
     "noEmit": false,
     "allowImportingTsExtensions": false,
     "composite": true,
-    "tsBuildInfoFile": "./.tsbuildinfo",
-    "paths": {
-      "@redux-ai/vector": ["../vector/src"],
-      "@redux-ai/schema": ["../schema/src"]
-    }
+    "tsBuildInfoFile": "./.tsbuildinfo"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts", "dist"],
