--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@reduxjs/toolkit": "^2.5.1",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
-    "@tanstack/react-query": "^5.66.5",
+    "@tanstack/react-query": "^5.66.7",
+    "@tanstack/react-query-devtools": "^5.66.7",
     "@types/ajv": "^0.0.5",
     "ajv": "^8.17.1",
     "class-variance-authority": "^0.7.0",
