--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@changesets/cli": "^2.28.0",
     "@hookform/resolvers": "^3.9.1",
     "@jest/types": "^29.6.3",
     "@jridgewell/trace-mapping": "^0.3.25",
@@ -50,6 +51,8 @@
     "@testing-library/react": "^14.2.1",
     "@types/ajv": "^0.0.5",
     "@types/jest": "^29.5.14",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "ajv": "^8.17.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -59,6 +62,10 @@
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
+    "eslint": "^9.20.1",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
@@ -71,6 +78,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pnpm": "^10.4.1",
+    "prettier": "^3.5.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
