--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -14,9 +14,14 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "lint": "eslint src --ext .ts,.tsx",
+    "test": "jest"
   },
   "dependencies": {
     "ajv": "^8.17.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
