Agent query: I've fixed the ESLint configuration and set up test scripts. We still have a few warnings about TypeScript types, but the critical errors are resolved. Would you like me to continue setting up the CI/CD pipeline for GitHub, or should we address the remaining TypeScript warnings first?
Enhance CI/CD: Add ESLint and Prettier configurations, improve testing, and update dependencies.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/597e53f2-a0bd-47ef-a44e-bd615e90097f/08dcce5d-e163-47fb-938e-8a084b8d7a45.jpg

--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -15,8 +15,12 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "lint": "eslint src --ext .ts,.tsx",
-    "test": "jest"
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "format": "prettier --write \"src/**/*.{ts,tsx,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,json}\"",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "ajv": "^8.17.1"
