--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@changesets/cli": "^2.28.0",
+    "@eslint/js": "^9.20.0",
     "@hookform/resolvers": "^3.9.1",
     "@jest/types": "^29.6.3",
     "@jridgewell/trace-mapping": "^0.3.25",
