Agent query: I've set up the testing and code quality tools, but we're seeing quite a few ESLint errors in the codebase. Would you like me to fix these issues first before moving forward with the CI/CD pipeline setup?
Update project dependencies and configure Prettier with import sorting and Tailwind CSS plugins.  Also updated Jest configuration for improved testing.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/597e53f2-a0bd-47ef-a44e-bd615e90097f/08dcce5d-e163-47fb-938e-8a084b8d7a45.jpg

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@changesets/cli": "^2.28.0",
     "@eslint/js": "^9.20.0",
     "@hookform/resolvers": "^3.9.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@jest/types": "^29.6.3",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
@@ -80,6 +81,7 @@
     "passport-local": "^1.0.0",
     "pnpm": "^10.4.1",
     "prettier": "^3.5.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
