--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,8 @@ jobs:
     - name: Install dependencies
       run: pnpm install
 
-    - name: Lint
-      run: pnpm run lint
+    - name: Run lint
+      run: bash ./lint.sh
 
     - name: Build packages
       run: pnpm run build
