Agent query: I've updated the ESLint configuration to use the modern flat config system, but we need to verify if this meets your needs for a simple setup. Would you like me to proceed with these changes, or would you prefer an even simpler configuration?
Refactor: Replace custom lint script with standard pnpm eslint setup.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       run: pnpm install
 
     - name: Run lint
-      run: bash ./lint.sh
+      run: pnpm eslint "client/src/**/*.{ts,tsx}" "packages/*/src/**/*.{ts,tsx}" "server/**/*.ts" "*.config.ts" --max-warnings=0
 
     - name: Build packages
       run: pnpm run build
