Agent query: I've updated the CI workflow to use pnpm consistently. Could you verify if the application is still working correctly?
Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/597e53f2-a0bd-47ef-a44e-bd615e90097f/b60e7f41-bf86-4193-a563-8cf4ae855b8c.jpg

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
       run: pnpm eslint "client/src/**/*.{ts,tsx}" "packages/*/src/**/*.{ts,tsx}" "server/**/*.ts" "*.config.ts" --max-warnings=0
 
     - name: Build packages
-      run: pnpm run build
+      run: pnpm run -r build
 
     - name: Run tests
       run: pnpm run -r test
