--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "framer-motion": "^11.13.1",
     "input-otp": "^1.2.4",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "nanoid": "^5.1.0",
@@ -93,6 +94,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "vaul": "^1.1.0",
     "wouter": "^3.6.0",
     "ws": "^8.18.0",
