Agent query: I've fixed the Prettier formatting issues, but found several ESLint errors in the codebase. Would you like me to continue fixing these code quality issues, or would you prefer to focus on setting up the versioning system first?
Refactor: Improve project structure, update Prettier configuration, and enhance documentation.

--- a/.prettierrc
+++ b/.prettierrc
@@ -8,14 +8,22 @@
   "bracketSpacing": true,
   "arrowParens": "avoid",
   "endOfLine": "lf",
-  "plugins": ["@ianvs/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
-  "importOrder": [
-    "^(react/(.*)$)|^(react$)",
-    "^(@redux-ai/(.*)$)",
-    "<THIRD_PARTY_MODULES>",
-    "",
-    "^@/(.*)$",
-    "^[./]"
-  ],
-  "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"]
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
+      "options": {
+        "plugins": ["@ianvs/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
+        "importOrder": [
+          "^(react/(.*)$)|^(react$)",
+          "^(@redux-ai/(.*)$)",
+          "<THIRD_PARTY_MODULES>",
+          "",
+          "^@/(.*)$",
+          "^[./]"
+        ],
+        "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"]
+      }
+    }
+  ]
 }
