--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -20,9 +20,5 @@
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts", "dist"],
-  "references": [
-    { "path": "../schema" },
-    { "path": "../state" },
-    { "path": "../vector" }
-  ]
+  "references": [{ "path": "../schema" }, { "path": "../state" }, { "path": "../vector" }]
 }
