--- a/packages/state/tsconfig.json
+++ b/packages/state/tsconfig.json
@@ -19,8 +19,5 @@
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts", "dist"],
-  "references": [
-    { "path": "../schema" },
-    { "path": "../vector" }
-  ]
+  "references": [{ "path": "../schema" }, { "path": "../vector" }]
 }
