--- a/packages/vector/tsconfig.json
+++ b/packages/vector/tsconfig.json
@@ -23,8 +23,5 @@
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts", "dist"],
-  "references": [
-    { "path": "../schema" },
-    { "path": "../state" }
-  ]
+  "references": [{ "path": "../schema" }, { "path": "../state" }]
 }
