Agent step too complex - Enhance development workflow, improve landing page, and implement proper CI/CD pipeline
Migrate testing framework from Jest to Vitest.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/597e53f2-a0bd-47ef-a44e-bd615e90097f/5762ead4-25a8-40a2-bc4b-74970048d6d8.jpg

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,7 +14,9 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@redux-ai/schema": "workspace:*",
