--- a/package.json
+++ b/package.json
@@ -49,12 +49,13 @@
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.66.7",
     "@tanstack/react-query-devtools": "^5.66.7",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
     "@types/ajv": "^0.0.5",
     "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
+    "@vitest/coverage-v8": "^3.0.6",
     "ajv": "^8.17.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -74,6 +75,7 @@
     "input-otp": "^1.2.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.0.0",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "nanoid": "^5.1.0",
@@ -96,6 +98,7 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "vaul": "^1.1.0",
+    "vitest": "^3.0.6",
     "wouter": "^3.6.0",
     "ws": "^8.18.0",
     "xstate": "^5.19.2",
