--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@eslint/js": "^9.20.0",
     "@hookform/resolvers": "^3.9.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@jest/types": "^29.6.3",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-accordion": "^1.2.1",
@@ -52,7 +51,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@types/ajv": "^0.0.5",
-    "@types/jest": "^29.5.14",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "@vitest/coverage-v8": "^3.0.6",
@@ -73,8 +72,6 @@
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.2.4",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^26.0.0",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
@@ -95,7 +92,6 @@
     "recharts": "^2.13.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "vaul": "^1.1.0",
     "vitest": "^3.0.6",
