Agent query: I've started setting up the CI/CD scripts with pnpm. The linting is working but found some issues in the React package. Should I continue fixing these linting errors before moving on to set up the other scripts (prettier, test, build)?
Add local CI/CD scripts for linting, formatting, testing, and building using pnpm.

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -16,7 +16,10 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "test": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "format": "prettier --write \"src/**/*.{ts,tsx,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,json}\""
   },
   "dependencies": {
     "@redux-ai/schema": "workspace:*",
