Agent query: I've fixed the ESLint and most formatting issues, but we're still having some Prettier formatting problems and test configuration issues. Should I continue fixing these issues, or would you like me to try a different approach to get the CI scripts working?
Enhance React package ESLint configuration and add unit tests for AIDebugContainer.

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -17,9 +17,10 @@
     "dev": "tsc --watch",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
-    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,json}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,tsx,json}\""
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,json}\"",
+    "ci": "pnpm run lint && pnpm run format:check && pnpm run test && pnpm run build"
   },
   "dependencies": {
     "@redux-ai/schema": "workspace:*",
