Agent step too complex - Verify and ensure all CI/CD scripts work locally with pnpm including lint, prettier, test and build
Configure pnpm and add pre-version CI checks with semantic versioning.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/597e53f2-a0bd-47ef-a44e-bd615e90097f/02a2ee8a-0f69-42b7-a560-89984d259953.jpg

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -21,7 +21,8 @@
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,json}\"",
-    "ci": "pnpm run lint && pnpm run format:check && pnpm run test && pnpm run build"
+    "ci": "pnpm run lint && pnpm run format:check && pnpm run test && pnpm run build",
+    "preversion": "pnpm run ci"
   },
   "dependencies": {
     "@redux-ai/schema": "workspace:*",
