--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -20,7 +20,9 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx,json}\"",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "ci": "pnpm run lint && pnpm run format:check && pnpm run test && pnpm run build",
+    "preversion": "pnpm run ci"
   },
   "dependencies": {
     "ajv": "^8.17.1"
