--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tanstack/react-query-devtools": "^5.66.7",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/ajv": "^0.0.5",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
