Agent query: Is the website showing the updated description that correctly positions Redux AI as an intelligent extension for Redux applications?
Update CI/CD, adopt pnpm, implement semantic versioning, and refine documentation.  Refactored scripts and descriptions to reflect project purpose as an AI-powered extension for Redux.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/597e53f2-a0bd-47ef-a44e-bd615e90097f/eaacef86-1602-4fb3-a10e-46de58c4f72d.jpg

--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -13,14 +13,14 @@
     }
   },
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
-    "lint": "eslint \"src/**/*.{ts,tsx}\"",
-    "format": "prettier --write \"src/**/*.{ts,tsx,json}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,tsx,json}\"",
-    "test": "vitest run",
-    "test:watch": "vitest watch",
-    "test:coverage": "vitest run --coverage",
+    "build": "pnpm tsc",
+    "dev": "pnpm tsc --watch",
+    "lint": "pnpm eslint \"src/**/*.{ts,tsx}\"",
+    "format": "pnpm prettier --write \"src/**/*.{ts,tsx,json}\"",
+    "format:check": "pnpm prettier --check \"src/**/*.{ts,tsx,json}\"",
+    "test": "pnpm vitest run",
+    "test:watch": "pnpm vitest watch",
+    "test:coverage": "pnpm vitest run --coverage",
     "ci": "pnpm run lint && pnpm run format:check && pnpm run test && pnpm run build",
     "preversion": "pnpm run ci"
   },
