Agent query: I've fixed the formatting issues in both the React and Vector packages, and standardized the scripts across packages. Would you like me to continue checking the remaining packages and verifying the CI workflow?
Refactor: Improve testing and build scripts in react package, update vitest configurations, and correct import order in test files.

--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -19,7 +19,7 @@
     "format": "pnpm prettier --write \"src/**/*.{ts,tsx,json}\"",
     "format:check": "pnpm prettier --check \"src/**/*.{ts,tsx,json}\"",
     "test": "pnpm vitest run",
-    "test:watch": "pnpm vitest watch",
+    "test:watch": "pnpm vitest",
     "test:coverage": "pnpm vitest run --coverage",
     "ci": "pnpm run lint && pnpm run format:check && pnpm run test && pnpm run build",
     "preversion": "pnpm run ci"
