--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -20,9 +20,22 @@
     "types": ["vitest/globals", "node"],
     "useDefineForClassFields": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "paths": {
+      "@/*": ["./src/*"],
+      "@redux-ai/schema": ["../../packages/schema/src"],
+      "@redux-ai/state": ["../../packages/state/src"],
+      "@redux-ai/vector": ["../../packages/vector/src"]
+    }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.test.ts", "dist"],
-  "references": [{ "path": "../schema" }, { "path": "../state" }, { "path": "../vector" }]
+  "include": [
+    "src/**/*",
+    "../../vitest.setup.ts"
+  ],
+  "exclude": ["node_modules", "dist"],
+  "references": [
+    { "path": "../schema" },
+    { "path": "../state" },
+    { "path": "../vector" }
+  ]
 }
