--- a/package.json
+++ b/package.json
@@ -71,8 +71,10 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
+    "husky": "^9.1.7",
     "input-otp": "^1.2.4",
     "jsdom": "^26.0.0",
+    "lint-staged": "^15.4.3",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "nanoid": "^5.1.0",
