fix: resolve typescript type errors in vitest setup and vite server options

--- a/packages/state/tsconfig.json
+++ b/packages/state/tsconfig.json
@@ -10,12 +10,16 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "declaration": true,
     "noEmit": false,
     "allowImportingTsExtensions": false,
     "composite": true,
-    "tsBuildInfoFile": "./.tsbuildinfo"
+    "tsBuildInfoFile": "./.tsbuildinfo",
+    "paths": {
+      "@redux-ai/vector": ["../../packages/vector/src"],
+      "@redux-ai/schema": ["../../packages/schema/src"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts", "dist"],
