--- a/packages/vector/tsconfig.json
+++ b/packages/vector/tsconfig.json
@@ -12,6 +12,7 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "bundler",
     "declaration": true,
+    "declarationMap": true,
     "noEmit": false,
     "allowImportingTsExtensions": false,
     "composite": true,
@@ -23,5 +24,5 @@
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts", "dist"],
-  "references": [{ "path": "../schema" }, { "path": "../state" }]
+  "references": [{ "path": "../schema" }]
 }
