fix(packages/react): resolve TypeScript build errors in CI
- Update tsconfig.json rootDir and include paths to properly handle vitest.setup.ts
- Add explicit type annotations in test-utils.tsx for better type portability

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "target": "ES2020",
@@ -28,7 +28,7 @@
       "@redux-ai/vector": ["../../packages/vector/src"]
     }
   },
-  "include": ["src/**/*", "../../vitest.setup.ts"],
+  "include": ["src/**/*", "vitest.setup.ts"],
   "exclude": ["node_modules", "dist"],
   "references": [{ "path": "../schema" }, { "path": "../state" }, { "path": "../vector" }]
 }
