chore: improve linting configuration
- Update ESLint configuration to handle TypeScript properly
- Add specific overrides for configuration files
- Fix TypeScript configuration in tailwind.config.ts
- Simplify stylelint rules for better Tailwind CSS compatibility

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,5 +1,6 @@
 {
   "*.{js,jsx,ts,tsx}": ["prettier --write", "eslint --fix"],
-  "*.{json,md,css}": ["prettier --write"],
+  "*.{json,md}": ["prettier --write"],
+  "*.css": ["prettier --write", "stylelint --fix"],
   "packages/*/src/**/*.{ts,tsx,json}": ["prettier --write", "eslint --fix"]
 }
