--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@reduxjs/toolkit": "^2.5.1",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
+    "@stylelint/postcss-css-in-js": "^0.38.0",
     "@tanstack/react-query": "^5.66.7",
     "@tanstack/react-query-devtools": "^5.66.7",
     "@testing-library/jest-dom": "^6.6.3",
@@ -82,6 +83,10 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pnpm": "^10.4.1",
+    "postcss-cli": "^11.0.0",
+    "postcss-import": "^16.1.0",
+    "postcss-reporter": "^7.1.0",
+    "postcss-scss": "^4.0.9",
     "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^18.3.1",
@@ -92,6 +97,10 @@
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.13.0",
+    "stylelint": "^16.14.1",
+    "stylelint-config-standard": "^37.0.0",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-config-tailwindcss": "^1.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
