feat: enhance pre-commit hooks with comprehensive linting
- Add vitest related test runs for JS/TS files
- Include StyleLint checks for CSS/SCSS files
- Add linting for CJS/MJS files
- Improve code quality checks before commits

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,11 @@
 {
-  "*.{js,jsx,ts,tsx}": ["prettier --write", "eslint --fix"],
+  "*.{js,jsx,ts,tsx}": [
+    "prettier --write",
+    "eslint --fix",
+    "vitest related --run"
+  ],
   "*.{json,md}": ["prettier --write"],
-  "*.css": ["prettier --write", "stylelint --fix"],
-  "packages/*/src/**/*.{ts,tsx,json}": ["prettier --write", "eslint --fix"]
+  "*.{css,scss}": ["prettier --write", "stylelint --fix"],
+  "packages/*/src/**/*.{ts,tsx,json}": ["prettier --write", "eslint --fix"],
+  "*.{cjs,mjs}": ["prettier --write", "eslint --fix"]
 }
