--- a/packages/state/tsconfig.json
+++ b/packages/state/tsconfig.json
@@ -21,7 +21,7 @@
       "@redux-ai/schema": ["../../packages/schema/src"]
     }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.test.ts", "dist"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts", "src/**/*.test.ts"],
+  "exclude": ["node_modules", "dist"],
   "references": [{ "path": "../schema" }, { "path": "../vector" }]
 }
