--- a/packages/vector/tsconfig.json
+++ b/packages/vector/tsconfig.json
@@ -22,7 +22,7 @@
       "@redux-ai/schema": ["../../packages/schema/src"]
     }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.test.ts", "dist"],
-  "references": [{ "path": "../schema" }]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts", "src/**/*.test.ts"],
+  "exclude": ["node_modules", "dist"],
+  "references": [{ "path": "../schema" }, { "path": "../state" }]
 }
