docs: update package dependency documentation and fix circular dependencies
- Added detailed package dependency documentation
- Clarified package dependency flow to prevent circular dependencies
- Updated tsconfig references to match dependency structure
- Enhanced type checking documentation
- Fixed formatting issues in CONTRIBUTING.md
- Simplified ESLint configuration with proper environment handling

--- a/packages/state/tsconfig.json
+++ b/packages/state/tsconfig.json
@@ -17,8 +17,8 @@
     "composite": true,
     "tsBuildInfoFile": "./.tsbuildinfo",
     "paths": {
-      "@redux-ai/vector": ["../../packages/vector/src"],
-      "@redux-ai/schema": ["../../packages/schema/src"]
+      "@redux-ai/schema": ["../../packages/schema/src"],
+      "@redux-ai/vector": ["../../packages/vector/src"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts", "src/**/*.test.ts"],
