--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "vaul": "^1.1.0",
+    "vite-plugin-dts": "^4.5.0",
     "vitest": "^3.0.6",
     "wouter": "^3.6.0",
     "ws": "^8.18.0",
