--- a/.npmrc
+++ b/.npmrc
@@ -7,3 +7,9 @@ shamefully-hoist=true
 # Ensure consistent package versions across workspace
 shared-workspace-lockfile=true
 prefer-workspace-packages=true
+
+# Publishing configuration
+access=public
+publish-branch=main
+registry=https://registry.npmjs.org/
+always-auth=true
