--- a/packages/state/package.json
+++ b/packages/state/package.json
@@ -21,13 +21,16 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "ci": "npm run lint && npm run format:check && npm run test && npm run build",
-    "preversion": "npm run ci"
+    "ci": "pnpm run lint && pnpm run format:check && pnpm run test && pnpm run build",
+    "preversion": "pnpm run ci"
   },
   "dependencies": {
     "@redux-ai/schema": "workspace:*",
     "@redux-ai/vector": "workspace:*",
     "@reduxjs/toolkit": "^2.5.1",
     "xstate": "^5.19.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
