--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -39,5 +39,8 @@
   "peerDependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
