--- a/packages/vector/package.json
+++ b/packages/vector/package.json
@@ -21,10 +21,13 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "ci": "npm run lint && npm run format:check && npm run test && npm run build",
-    "preversion": "npm run ci"
+    "ci": "pnpm run lint && pnpm run format:check && pnpm run test && pnpm run build",
+    "preversion": "pnpm run ci"
   },
   "dependencies": {
     "@redux-ai/schema": "workspace:*"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
